# put-p-cmax-genetic

./: .gitignore  CMakeLists.txt  Config.cpp  Greedy.cpp  Makefile  README.md  TestGenerator.cpp  main.cpp  run-benchmark.ps1  run-greedy-ranking.ps1  run-ranking.ps1  run-tabu-ranking.ps1  wyniki.txt
Genetic/: Genetic.cpp  Genetic.h  Random.cpp  Random.h
Greedy/: Greedy.cpp  Greedy.h  GreedyStack.cpp  GreedyStack.h  main.cpp
Shared/: InputData.cpp  InputData.h  Reader.cpp  Reader.h
TestGenerator/: TestGenerator.cpp
instances/: 1m25_best.txt  2m50_best.txt  3m50n1000_best.txt  4m50n200_best.txt  5m10n200_best.txt
logs/: 1best_m25.txt  2best_m50.txt  3best_m50n1000.txt  4best_m50n200.txt  5best_m10n200.txt
